Revert "Revert "Merge remote-tracking branch 'maptime/master'""
This reverts commit a576df29995bff8ca775f244a7690cb9f11539eb.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,5 +25,5 @@
   {% for stylesheet in page.css %}
   <link rel="stylesheet" href="{{site.baseurl}}/css/{{ stylesheet }}">
   {% endfor %}
-  <link rel='shortcut icon' href='img/favicon.png' type='image/x-icon' />
+  <link rel='shortcut icon' href='{{site.baseurl}}/img/favicon.png' type='image/x-icon' />
 </head>
